# bumblebee

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  bumblebee.yaml.template  bumblebee.yaml.test  bumblebee_template.yaml  lambda_function.py  make_exe.py  pyproject.toml
.github/copilot/: config.yml  instructions.md
.github/workflows/: deploy-lambda.yml
src/: __init__.py  main.py  test.py  util_bumblebee.py
