[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bumblebee"
version = "0.1.0"
description = "A tool to monitor OneDrive folders, transcribe audio files, and perform tasks based on content"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Project Owner"}
]
dependencies = [
    "pyyaml>=6.0",
    "pathlib>=1.0.1",
    "watchdog>=2.3.0", # For future enhancement of file watching
    "python-docx>=1.1.0", # For processing Word documents # For audio transcription
    "faster-whisper>=0.10.0",
    "youtube-transcript-api>=1.0.3",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "types-pyyaml>=6.0.12",  # Type stubs for PyYAML
]

[project.scripts]
bumblebee = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
    "LICENSE",
]
